Fixed alignment issues and animation position issues for mobile views.

--- a/src/features/game/game.module.css
+++ b/src/features/game/game.module.css
@@ -6,10 +6,10 @@
   height: 336px;
   width: 341px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 640px) {
     background-image: url('../../assets/images/board-layer-black-large.svg');
     height: 610px;
-    width: 636px;
+    width: 638px;
   }
 }
 
@@ -21,7 +21,7 @@
   height: 326px;
   width: 341px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 640px) {
     background-image: url('../../assets/images/board-layer-white-large.svg');
     height: 600px;
     width: 638px;
@@ -64,7 +64,7 @@
     background-position: center center;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 640px) {
     &.red {
       background-color: transparent;
       background-image: url('../../assets/images/counter-red-large.svg');
